# nx_edit

./: .gitignore  Cargo.toml  Makefile  README.md  keys  rustfmt.toml
src/: audio.rs  compression.rs  err.rs  main.rs  nx_utils.rs  state.rs  ui.rs
