[package]
name = "nx_edit"
version = "0.1.0"
authors = ["Emmy Noether <intransigentms@gmail.com>"]
repository = "https://bitbucket.org/NoetherEmmy/nx_edit"
readme = "README.md"
license = "AGPL-3.0-or-later"

[dependencies]
fxhash = "*"
gdk-pixbuf = "*"
gio = "*"
glib = "*"
gtk = { version = "*", features = ["v3_22"] }
nx = "*"
pango = "*"

[features]
default = []

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
debug = false
debug-assertions = false
rpath = false
codegen-units = 1
